--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1976,13 +1976,19 @@ footer {
           img {
             border-radius: 50%;
           }
-
-
         }
 
         .adminComment {
           margin-left: 10px;
+
           // flex-direction: column;
+          .bxs-star.gold {
+            color: #FFCD00FF;
+          }
+
+          .bxs-star.grey {
+            color: #D6D6E5FF;
+          }
         }
       }
 
@@ -1994,244 +2000,132 @@ footer {
       .emailContent {
         margin-top: 30px;
 
-        .rating {
-          .line {
-            margin: 0 15px;
-            margin-bottom: 5px;
+        #rating {
+          .active {
+            i {
+              text-shadow: rgba(0, 0, 0, 0.0) 0px;
+            }
+          }
+
+          i {
+            cursor: pointer;
+          }
+
+          .bxs-star.gold {
+            color: #FFCD00FF;
+          }
+
+          .bxs-star.grey {
+            color: #D6D6E5FF;
           }
         }
 
-        form {
-          label {
-            width: 100%;
-            margin-bottom: 10px;
-          }
-
-          textarea {
-            background: #F3F4F7FF;
-            border: none;
-            outline: none;
-            width: 100%;
-            min-height: 200px;
-            padding: 20px;
-          }
-
-          .inp {
-            background: #F3F4F7FF;
-            width: 100%;
-            margin-bottom: 10px;
-            padding: 5px 10px;
-            outline: none;
-            border: none;
-          }
-
-          .check {}
+        .line {
+          margin: 0 15px;
+          margin-bottom: 5px;
         }
+
+
+      }
+
+      form {
+        label {
+          width: 100%;
+          margin-bottom: 10px;
+        }
+
+        textarea {
+          background: #F3F4F7FF;
+          border: none;
+          outline: none;
+          width: 100%;
+          min-height: 200px;
+          padding: 20px;
+        }
+
+        .inp {
+          background: #F3F4F7FF;
+          width: 100%;
+          margin-bottom: 10px;
+          padding: 5px 10px;
+          outline: none;
+          border: none;
+        }
+
+        .check {}
       }
     }
   }
+}
 
-  h5 {
-    margin: 0 -4%;
-    background: #F7F8FDFF;
-    padding: 70px 50px 30px;
-  }
+h5 {
+  margin: 0 -4%;
+  background: #F7F8FDFF;
+  padding: 70px 50px 30px;
+}
 
-  .lastSection {
-    margin: 4% 11%;
+.lastSection {
+  margin: 4% 11%;
 
-    .product {
-      border: 0.5px solid rgb(214, 214, 214);
-      background-color: white;
+  .product {
+    border: 0.5px solid rgb(214, 214, 214);
+    background-color: white;
 
-      .content {
+    .content {
+      padding: 15px 25px;
+      cursor: pointer;
+      position: relative;
+      transition-duration: 0.5s;
+
+      &:hover {
+        position: absolute;
         padding: 15px 25px;
-        cursor: pointer;
-        position: relative;
-        transition-duration: 0.5s;
-
-        &:hover {
-          position: absolute;
-          padding: 15px 25px;
-          width: 18.7%;
-          z-index: 5;
-          background: white;
-          border: 1px solid grey;
-          box-shadow: rgba(0, 0, 0, 0.9) 0px 3px 11px;
-
-          .discount {
-            top: 4.2%;
-            padding: 5px 15px;
-          }
-
-          .offer {
-            top: 13%;
-            padding: 5px 15px;
-          }
-
-          .type {
-            top: 13%;
-            padding: 5px 15px;
-          }
-
-          .minimize {
-            right: 8.5%;
-            visibility: visible;
-            transition-duration: 0.4s;
-
-          }
-
-          .heart {
-            right: 8%;
-            visibility: visible;
-            transition-duration: 0.7s;
-
-          }
-
-          button {
-            display: block;
-          }
-
-          .prodCount {
-            display: none;
-            position: relative;
-            text-align: center;
-            top: 15px;
-            padding-bottom: 24px;
-
-
-            :last-child {
-              right: 10%;
-              position: absolute;
-              font-size: 20px;
-              border-radius: 50%;
-              border: 1px solid;
-              padding: 0px 6px;
-              background: #FFCD00FF;
-              border: none;
-            }
-
-            :first-child {
-              position: absolute;
-              left: 10%;
-              font-size: 20px;
-              border-radius: 50%;
-              border: 1px solid;
-              padding: 0px 6px;
-              background: #C8C8D7FF;
-              border: none;
-            }
-
-          }
-        }
-
-        .description {
-          font-size: 12px;
-        }
-
-        i {
-          position: absolute;
-          visibility: hidden;
-          top: 12%;
-          background: white;
-          border-radius: 50%;
-          padding: 10px;
-          box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 8px 2px, rgba(17, 17, 26, 0.1) 0px 16px 4px;
-        }
+        width: 18.7%;
+        z-index: 5;
+        background: white;
+        border: 1px solid grey;
+        box-shadow: rgba(0, 0, 0, 0.9) 0px 3px 11px;
 
         .discount {
-          position: absolute;
-          top: 5%;
-          font-size: 11px;
-          font-weight: 500;
+          top: 4.2%;
           padding: 5px 15px;
-          color: white;
-          border-radius: 5px;
-          background-color: #2BBEF9FF;
         }
 
         .offer {
-          position: absolute;
-          top: 15%;
-          font-size: 10px;
-          font-weight: 500;
+          top: 13%;
           padding: 5px 15px;
-          border-radius: 5px;
-          color: white;
-          background-color: #71778EFF;
         }
 
         .type {
-          position: absolute;
-          top: 15%;
-          font-size: 10px;
-          font-weight: 500;
+          top: 13%;
           padding: 5px 15px;
-          border-radius: 15px;
-          color: #198E4DFF;
-          background-color: #E5F8EDFF;
         }
 
         .minimize {
-          top: 5%;
-          right: 5%;
+          right: 8.5%;
+          visibility: visible;
+          transition-duration: 0.4s;
 
-          &:hover {
-            background-color: #233A95FF;
-            color: white;
-          }
         }
-
 
         .heart {
-          top: 15%;
-          right: 2%;
+          right: 8%;
+          visibility: visible;
+          transition-duration: 0.7s;
 
-          &:hover {
-            background-color: #233A95FF;
-            color: white;
-          }
-        }
-
-        p {
-          width: 90%;
-          margin: 0 !important;
-
-          img {
-            width: 60%;
-          }
-        }
-
-        strong {
-          font-size: 10px;
-          font-weight: 700;
-          color: #2FC573FF;
-        }
-
-        img {
-          width: 100%;
         }
 
         button {
-          display: none;
-          padding: 5px 70px;
-          font-size: 12px;
-          margin: 15px 0px;
-          border-radius: 20px;
-        }
-
-        button,
-        .prodCount {
-          display: none;
-          padding: 5px 70px;
-          margin: 20px 10px 3px;
-          border-radius: 10px;
+          display: block;
         }
 
         .prodCount {
           display: none;
           position: relative;
           text-align: center;
+          top: 15px;
+          padding-bottom: 24px;
+
 
           :last-child {
             right: 10%;
@@ -2257,9 +2151,142 @@ footer {
 
         }
       }
+
+      .description {
+        font-size: 12px;
+      }
+
+      i {
+        position: absolute;
+        visibility: hidden;
+        top: 12%;
+        background: white;
+        border-radius: 50%;
+        padding: 10px;
+        box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 8px 2px, rgba(17, 17, 26, 0.1) 0px 16px 4px;
+      }
+
+      .discount {
+        position: absolute;
+        top: 5%;
+        font-size: 11px;
+        font-weight: 500;
+        padding: 5px 15px;
+        color: white;
+        border-radius: 5px;
+        background-color: #2BBEF9FF;
+      }
+
+      .offer {
+        position: absolute;
+        top: 15%;
+        font-size: 10px;
+        font-weight: 500;
+        padding: 5px 15px;
+        border-radius: 5px;
+        color: white;
+        background-color: #71778EFF;
+      }
+
+      .type {
+        position: absolute;
+        top: 15%;
+        font-size: 10px;
+        font-weight: 500;
+        padding: 5px 15px;
+        border-radius: 15px;
+        color: #198E4DFF;
+        background-color: #E5F8EDFF;
+      }
+
+      .minimize {
+        top: 5%;
+        right: 5%;
+
+        &:hover {
+          background-color: #233A95FF;
+          color: white;
+        }
+      }
+
+
+      .heart {
+        top: 15%;
+        right: 2%;
+
+        &:hover {
+          background-color: #233A95FF;
+          color: white;
+        }
+      }
+
+      p {
+        width: 90%;
+        margin: 0 !important;
+
+        img {
+          width: 60%;
+        }
+      }
+
+      strong {
+        font-size: 10px;
+        font-weight: 700;
+        color: #2FC573FF;
+      }
+
+      img {
+        width: 100%;
+      }
+
+      button {
+        display: none;
+        padding: 5px 70px;
+        font-size: 12px;
+        margin: 15px 0px;
+        border-radius: 20px;
+      }
+
+      button,
+      .prodCount {
+        display: none;
+        padding: 5px 70px;
+        margin: 20px 10px 3px;
+        border-radius: 10px;
+      }
+
+      .prodCount {
+        display: none;
+        position: relative;
+        text-align: center;
+
+        :last-child {
+          right: 10%;
+          position: absolute;
+          font-size: 20px;
+          border-radius: 50%;
+          border: 1px solid;
+          padding: 0px 6px;
+          background: #FFCD00FF;
+          border: none;
+        }
+
+        :first-child {
+          position: absolute;
+          left: 10%;
+          font-size: 20px;
+          border-radius: 50%;
+          border: 1px solid;
+          padding: 0px 6px;
+          background: #C8C8D7FF;
+          border: none;
+        }
+
+      }
     }
   }
 }
+
 
 
 
