--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -976,7 +976,7 @@ body main .extraPercent :first-child :first-child h2 {
 }
 
 body main .extraProductSection > div {
-  margin: 11%;
+  margin: 0 11%;
   width: 80%;
 }
 
@@ -1202,6 +1202,19 @@ body main .lastSectionBody .lastSection {
 body main .lastSectionBody .lastSection .product {
   position: relative;
   margin-top: 40px;
+  border: none;
+}
+
+body main .lastSectionBody .lastSection .product .description p {
+  margin-top: 10px;
+  opacity: 0.4;
+  font-weight: bold;
+  font-size: 14px;
+}
+
+body main .lastSectionBody .lastSection .product .description h5 {
+  font-weight: bold;
+  font-size: 21px;
 }
 
 body main .lastSectionBody .lastSection .product img {
@@ -1209,18 +1222,18 @@ body main .lastSectionBody .lastSection .product img {
   border-radius: 10px;
 }
 
-body main .lastSectionBody .lastSection .product .content {
+body main .lastSectionBody .lastSection .product .cont {
   position: absolute;
   top: 0;
   left: 0;
   padding: 35px 45px;
 }
 
-body main .lastSectionBody .lastSection .product .content h6 {
+body main .lastSectionBody .lastSection .product .cont h6 {
   color: green;
 }
 
-body main .lastSectionBody .lastSection .product .content button {
+body main .lastSectionBody .lastSection .product .cont button {
   color: white;
   background-color: #C2C2D3FF;
   border: none;
@@ -1740,6 +1753,36 @@ footer .contactBody .contact .contactNumb {
           box-shadow: rgba(0, 0, 0, 0.9) 0px 3px 11px;
 }
 
+.shop .shopPage .rightSide .product .content:hover .prodCount {
+  display: none;
+  position: relative;
+  text-align: center;
+  padding-bottom: 12px;
+  left: 15px;
+}
+
+.shop .shopPage .rightSide .product .content:hover .prodCount :last-child {
+  right: 10%;
+  position: absolute;
+  font-size: 20px;
+  border-radius: 50%;
+  border: 1px solid;
+  padding: 0px 6px;
+  background: #FFCD00FF;
+  border: none;
+}
+
+.shop .shopPage .rightSide .product .content:hover .prodCount :first-child {
+  position: absolute;
+  left: 10%;
+  font-size: 20px;
+  border-radius: 50%;
+  border: 1px solid;
+  padding: 0px 6px;
+  background: #C8C8D7FF;
+  border: none;
+}
+
 .shop .shopPage .rightSide .product .content:hover .minimize {
   right: 8.5%;
   visibility: visible;
@@ -1771,6 +1814,39 @@ footer .contactBody .contact .contactNumb {
   padding: 10px;
   -webkit-box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 8px 2px, rgba(17, 17, 26, 0.1) 0px 16px 4px;
           box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 8px 2px, rgba(17, 17, 26, 0.1) 0px 16px 4px;
+}
+
+.shop .shopPage .rightSide .product .content .discount {
+  position: absolute;
+  top: 5%;
+  font-size: 11px;
+  font-weight: 500;
+  padding: 5px 15px;
+  color: white;
+  border-radius: 5px;
+  background-color: #2BBEF9FF;
+}
+
+.shop .shopPage .rightSide .product .content .offer {
+  position: absolute;
+  top: 15%;
+  font-size: 10px;
+  font-weight: 500;
+  padding: 5px 15px;
+  border-radius: 5px;
+  color: white;
+  background-color: #71778EFF;
+}
+
+.shop .shopPage .rightSide .product .content .type {
+  position: absolute;
+  top: 15%;
+  font-size: 10px;
+  font-weight: 500;
+  padding: 5px 15px;
+  border-radius: 15px;
+  color: #198E4DFF;
+  background-color: #E5F8EDFF;
 }
 
 .shop .shopPage .rightSide .product .content .minimize {
@@ -1810,10 +1886,52 @@ footer .contactBody .contact .contactNumb {
   border-radius: 10px;
 }
 
+.shop .shopPage .rightSide .product .content .prodCount {
+  display: none;
+  position: relative;
+  text-align: center;
+  padding-bottom: 12px;
+  left: 15px;
+}
+
+.shop .shopPage .rightSide .product .content .prodCount :last-child {
+  right: 10%;
+  position: absolute;
+  font-size: 20px;
+  border-radius: 50%;
+  border: 1px solid;
+  padding: 0px 6px;
+  background: #FFCD00FF;
+  border: none;
+}
+
+.shop .shopPage .rightSide .product .content .prodCount :first-child {
+  position: absolute;
+  left: 10%;
+  font-size: 20px;
+  border-radius: 50%;
+  border: 1px solid;
+  padding: 0px 6px;
+  background: #C8C8D7FF;
+  border: none;
+}
+
 .productBody {
   position: relative;
   background-color: #F7F8FDFF;
   margin-bottom: 50px;
+}
+
+.productBody h5 {
+  margin: 0 -4%;
+  background: #F7F8FDFF;
+  padding: 70px 50px 30px;
+}
+
+.productBody .header {
+  margin-left: 13%;
+  padding: 30px 0;
+  font-size: 14px;
 }
 
 .productBody .firstSection {
@@ -1828,7 +1946,7 @@ footer .contactBody .contact .contactNumb {
 
 .productBody .firstSection .leftPart .carousel-indicators .btns {
   position: absolute;
-  bottom: 110px;
+  bottom: 220px;
   left: 42px;
 }
 
@@ -1847,18 +1965,100 @@ footer .contactBody .contact .contactNumb {
 }
 
 .productBody .firstSection .middlePart {
-  margin-left: 15%;
+  margin-left: 12%;
   padding: 20px;
+  width: 370px;
+  position: relative;
+}
+
+.productBody .firstSection .middlePart .price {
+  font-size: 20px;
+  font-weight: 600;
+  margin-left: 10px;
+  color: #D51243FF;
+}
+
+.productBody .firstSection .middlePart strong {
+  display: block;
+  font-size: 12px;
+  font-weight: 600;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  padding: 5px 15px;
+  border-radius: 15px;
+  color: #198E4DFF;
+  background-color: #E5F8EDFF;
+  margin-bottom: 14px;
+}
+
+.productBody .firstSection .middlePart .minBtn,
+.productBody .firstSection .middlePart .plusBtn {
+  cursor: pointer;
+  padding: 10px 16px;
+  border: none;
+  font-size: 16px;
+  font-weight: 600;
+  border-radius: 50%;
+}
+
+.productBody .firstSection .middlePart .count {
+  margin: 0 10px;
+  width: 40px;
+}
+
+.productBody .firstSection .middlePart #productBtn {
+  padding: 10px 45px;
+  margin-left: 18px;
+  background: #233A95FF;
+  color: white;
+  border: none;
+  border-radius: 20px;
+}
+
+.productBody .firstSection .middlePart input {
+  margin: 20px 48px;
+  border: none;
+  outline: none;
+}
+
+.productBody .firstSection .middlePart #errMes {
+  left: 55px;
+  top: 47%;
+  color: red;
+  font-weight: bold;
+  position: absolute;
+}
+
+.productBody .firstSection .middlePart .reset {
+  padding: 10px 45px;
+  margin-left: 25px;
+  background: red;
+  color: white;
+  border: none;
+  border-radius: 20px;
+}
+
+.productBody .firstSection .middlePart .desc {
+  font-size: 14px;
+}
+
+.productBody .firstSection .rightPart {
+  width: 250px;
+  margin-left: 20px;
+  margin-top: 25px;
 }
 
 .productBody .firstSection .rightPart p {
-  padding: 5px 20px;
+  padding: 8px 25px;
   background: #FFEEF2FF;
   color: #BE143CFF;
+  font-size: 13px;
 }
 
 .productBody .firstSection .rightPart .content {
   background: #F7F8FDFF;
+  font-size: 12px;
 }
 
 .productBody .firstSection .rightPart .content span {
@@ -1959,12 +2159,6 @@ footer .contactBody .contact .contactNumb {
   padding: 5px 10px;
   outline: none;
   border: none;
-}
-
-h5 {
-  margin: 0 -4%;
-  background: #F7F8FDFF;
-  padding: 70px 50px 30px;
 }
 
 .lastSection {
