--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -990,7 +990,7 @@ body {
 
     .extraProductSection {
       >div {
-        margin: 11%;
+        margin: 0 11%;
         width: 80%;
 
         .product {
@@ -1214,16 +1214,32 @@ body {
       .lastSection {
         margin-left: 10.5%;
 
+
         .product {
           position: relative;
           margin-top: 40px;
+          border: none;
+
+          .description {
+            p {
+              margin-top: 10px;
+              opacity: 0.4;
+              font-weight: bold;
+              font-size: 14px;
+            }
+
+            h5 {
+              font-weight: bold;
+              font-size: 21px;
+            }
+          }
 
           img {
             width: 97%;
             border-radius: 10px;
           }
 
-          .content {
+          .cont {
             position: absolute;
             top: 0;
             left: 0;
@@ -1232,10 +1248,6 @@ body {
             h6 {
               color: green;
             }
-
-            h3 {}
-
-            p {}
 
             button {
               color: white;
@@ -1796,7 +1808,36 @@ footer {
             border: 1px solid grey;
             box-shadow: rgba(0, 0, 0, 0.9) 0px 3px 11px;
 
+            .prodCount {
+              display: none;
+              position: relative;
+              text-align: center;
+              padding-bottom: 12px;
+              left: 15px;
 
+              :last-child {
+                right: 10%;
+                position: absolute;
+                font-size: 20px;
+                border-radius: 50%;
+                border: 1px solid;
+                padding: 0px 6px;
+                background: #FFCD00FF;
+                border: none;
+              }
+
+              :first-child {
+                position: absolute;
+                left: 10%;
+                font-size: 20px;
+                border-radius: 50%;
+                border: 1px solid;
+                padding: 0px 6px;
+                background: #C8C8D7FF;
+                border: none;
+              }
+
+            }
 
             .minimize {
               right: 8.5%;
@@ -1829,6 +1870,39 @@ footer {
             border-radius: 50%;
             padding: 10px;
             box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 8px 2px, rgba(17, 17, 26, 0.1) 0px 16px 4px;
+          }
+
+          .discount {
+            position: absolute;
+            top: 5%;
+            font-size: 11px;
+            font-weight: 500;
+            padding: 5px 15px;
+            color: white;
+            border-radius: 5px;
+            background-color: #2BBEF9FF;
+          }
+
+          .offer {
+            position: absolute;
+            top: 15%;
+            font-size: 10px;
+            font-weight: 500;
+            padding: 5px 15px;
+            border-radius: 5px;
+            color: white;
+            background-color: #71778EFF;
+          }
+
+          .type {
+            position: absolute;
+            top: 15%;
+            font-size: 10px;
+            font-weight: 500;
+            padding: 5px 15px;
+            border-radius: 15px;
+            color: #198E4DFF;
+            background-color: #E5F8EDFF;
           }
 
           .minimize {
@@ -1867,6 +1941,36 @@ footer {
             margin: 5px 0px;
             border-radius: 10px;
           }
+          .prodCount {
+            display: none;
+            position: relative;
+            text-align: center;
+            padding-bottom: 12px;
+            left: 15px;
+
+            :last-child {
+              right: 10%;
+              position: absolute;
+              font-size: 20px;
+              border-radius: 50%;
+              border: 1px solid;
+              padding: 0px 6px;
+              background: #FFCD00FF;
+              border: none;
+            }
+
+            :first-child {
+              position: absolute;
+              left: 10%;
+              font-size: 20px;
+              border-radius: 50%;
+              border: 1px solid;
+              padding: 0px 6px;
+              background: #C8C8D7FF;
+              border: none;
+            }
+
+          }
         }
       }
     }
@@ -1882,6 +1986,18 @@ footer {
   background-color: #F7F8FDFF;
   margin-bottom: 50px;
 
+  h5 {
+    margin: 0 -4%;
+    background: #F7F8FDFF;
+    padding: 70px 50px 30px;
+  }
+
+  .header {
+    margin-left: 13%;
+    padding: 30px 0;
+    font-size: 14px;
+  }
+
   .firstSection {
     margin: 0 13%;
     background-color: white;
@@ -1893,7 +2009,7 @@ footer {
       .carousel-indicators {
         .btns {
           position: absolute;
-          bottom: 110px;
+          bottom: 220px;
           left: 42px;
 
           img {
@@ -1914,20 +2030,100 @@ footer {
     }
 
     .middlePart {
-      margin-left: 15%;
+      margin-left: 12%;
       padding: 20px;
+      width: 370px;
+      position: relative;
+
+      .price {
+        font-size: 20px;
+        font-weight: 600;
+        margin-left: 10px;
+        color: #D51243FF;
+      }
+
+      strong {
+        display: block;
+        font-size: 12px;
+        font-weight: 600;
+        width: max-content;
+        padding: 5px 15px;
+        border-radius: 15px;
+        color: #198E4DFF;
+        background-color: #E5F8EDFF;
+        margin-bottom: 14px;
+      }
+
+      .minBtn,
+      .plusBtn {
+        cursor: pointer;
+        padding: 10px 16px;
+        border: none;
+        font-size: 16px;
+        font-weight: 600;
+        border-radius: 50%;
+      }
+
+      .count {
+        margin: 0 10px;
+        width: 40px;
+
+      }
+
+      #productBtn {
+        padding: 10px 45px;
+        margin-left: 18px;
+        background: #233A95FF;
+        color: white;
+        border: none;
+        border-radius: 20px;
+
+      }
+
+      input {
+        margin: 20px 48px;
+        border: none;
+        outline: none;
+      }
+
+      #errMes {
+        left: 55px;
+        top: 47%;
+        color: red;
+        font-weight: bold;
+        position: absolute;
+      }
+
+      .reset {
+        padding: 10px 45px;
+        margin-left: 25px;
+        background: red;
+        color: white;
+        border: none;
+        border-radius: 20px;
+      }
+
+
+      .desc {
+        font-size: 14px;
+      }
     }
 
     .rightPart {
+      width: 250px;
+      margin-left: 20px;
+      margin-top: 25px;
 
       p {
-        padding: 5px 20px;
+        padding: 8px 25px;
         background: #FFEEF2FF;
         color: #BE143CFF;
+        font-size: 13px;
       }
 
       .content {
         background: #F7F8FDFF;
+        font-size: 12px;
 
         span {
           display: block;
@@ -2058,11 +2254,7 @@ footer {
   }
 }
 
-h5 {
-  margin: 0 -4%;
-  background: #F7F8FDFF;
-  padding: 70px 50px 30px;
-}
+
 
 .lastSection {
   margin: 4% 11%;
@@ -2286,9 +2478,6 @@ h5 {
     }
   }
 }
-
-
-
 
 
 
